--- a/vercel.json
+++ b/vercel.json
@@ -9,4 +9,12 @@
   ]
 }
 
-
+{
+  "version": 2,
+  "builds": [
+    { "src": "index.html", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
+}
