--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,19 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
+    { "src": "style.css", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/style.css" }
+  ]
+}
+
+{
+  "version": 3,
+  "builds": [
+    { "src": "script.js", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/script.js" }
   ]
 }
